--- a/src/template.html
+++ b/src/template.html
@@ -10,10 +10,9 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
-
+            <button class="home">Home</button>
+            <button class="menu">Menu</button>
+            <button class="contact">Contact</button>
         </nav>
     </header>
     <div id="content">
